fix(styles):  fix text alignment in language switch dropdown to match design

--- a/packages/components/src/components/post-language-option/post-language-option.scss
+++ b/packages/components/src/components/post-language-option/post-language-option.scss
@@ -60,7 +60,8 @@ post-language-option {
 
     :is(a, button) {
       padding-block: 13px;
-      padding-inline: 24px;
+      padding-inline-start: 16px;
+      padding-inline-end: 32px;
       box-sizing: border-box;
       position: relative;
       left: -1px;
